--- a/hackerstash/static/scss/components/_previews.scss
+++ b/hackerstash/static/scss/components/_previews.scss
@@ -5,7 +5,7 @@
     color: $blue-500;
     font-size: 12px;
     margin-left: .15rem;
-    vertical-align: top;
+    vertical-align: bottom;
   }
 }
 
